# IRma

./: .gitignore  IRMA_Advanced.ipynb  IRMA_Remoto.ipynb  LICENSE  README.md  acousticfield_gui.spec  cont_rec.sh  generate.py  gsm_send.py  irma_gui.spec  options.yaml  parameters.py  process.py  recording.sh  requirements.txt  setup.cfg  setup.py  soundscape.py  soundscape_process.py  test1.ipynb  watch3.sh  watch_process.sh
acousticfield/: generate.py
config/: defaults.yaml
scripts/: convert_stereo2mono.sh  options.yaml  pinstate.c  recording.sh  recording_mono.sh  soundscape_process.py  soundscape_process_single.py  watch_process.sh  watch_process_offline.sh
src/acousticfield/: acousticfield_gui.py  display.py  generate.py  gui_ctk.py  io.py  process.py  room.py  session.py  soundscape.py
src/acousticfield/data/: A2B-Ambeo-VST-Oct2018-FilterON-FuMa.npy
src/acousticfield/examples/: acousticfield_gui.py
src/acousticfield/utils/: audioutils.py  ctktable.py  ctkutils.py
src/irma/: binaural.py  display.py  generate.py  gui_ctk.py  io.py  room.py  session.py  session_nosd.py
src/irma/data/: A2B-Ambeo-VST-Oct2018-FilterON.npy
src/irma/examples/: acousticfield_gui.py  acousticfield_gui.spec  irma_gui.py
src/irma/utils/: audioutils.py  ctkutils.py
src/notebooks/: Session1  field_session.ipynb  ri_L1.npy  ri_Session1_SR_Mpub1_D1_2ch_loop_Mono.npy  test_acousticfield.ipynb  test_irma.ipynb
tests/: test_acousticfield.ipynb  test_session.py
