[metadata]
name = acousticfield
version = 0.0.5-3
author = LAPSo
author_email = me@lapso.org
description = Acoustic utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meguia/acousticfield
project_urls =
    Bug Tracker = https://github.com/meguia/acousticfield/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools >= 42
[options.packages.find]
where = src